--- a/YugiCompleto/Assets/Photon/PhotonUnityNetworking/changelog.txt
+++ b/YugiCompleto/Assets/Photon/PhotonUnityNetworking/changelog.txt
@@ -3,7 +3,7 @@ PUN 2 - Changelog
 Exit Games GmbH - www.photonengine.com - forum.photonengine.com
 
 
-v2.40 (22. November 2021)
+v2.Constants.CARDS_IN_DECK (22. November 2021)
 Fixed: Unity 2021.2 support. PhotonEditorUtils.IsPrefab now uses the correct prefab stage utility for Unity 2021.2 and up.
 Changed: PhotonHandler.Dispatch is now catching exceptions. It will count them but only provide the first one's callstack (to avoid log spamming).
 Note: While the Photon lib caught exceptions in v4.1.6.10, that has not been a good solution. This new approach can be changed in source and is more flexible overall.
